<resources>
    <string name="app_name">Practical work 2</string>
        <string name="label">Введите сумму счета:</string>
        <string name="tip_label">Выберите процент чаевых:</string>
        <string name="tip_10">10%</string>
        <string name="tip_15">15%</string>
        <string name="tip_20">20%</string>
        <string name="calculate_button">Рассчитать</string>
        <string name="tip_result">Чаевые:</string>
</resources>